--- a/style.css
+++ b/style.css
@@ -3,3 +3,16 @@
     padding: 0%;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
+footer {
+    height: 500px;
+    width: 100%;
+    background-image:linear-gradient(to bottom left, rgb(13, 221, 221), rgb(47, 184, 184), blue);
+}
+footer img {
+    height: 250px;
+    width: 30%;
+    float: left;
+    padding-left: 25px;
+    padding-right: 18px;
+    padding-top: 125px;
+}
